--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,12 @@ body {
 
 }
 
+.g-container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin:auto;
+}
+
 .bg {
     background-color: rgb(254, 249, 242);
 
@@ -165,9 +171,13 @@ body {
 @media only screen 
     and (max-device-width : 1000px) 
     {
+      .g-container {
+        padding: 0;
+        /* margin:auto; */
+      }
 
         body {
-            height: 100%;
+            height: 100vh;
             z-index: -1;
             text-align: center;
             margin: auto;
