--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ body {
             background-repeat: no-repeat;
             background-size: cover;
             overflow: hidden;
-            position: relative;
+            position: fixed;
           }
     
           .sc-banner {
