--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ body {
 
 .bg {
     background-color: rgb(254, 249, 242);
-
     text-align: center;
     z-index: -1;
     height: 100%;
@@ -28,7 +27,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
   }
 
@@ -63,16 +62,13 @@ body {
     /* The image used */
     background-image: url(../img/tropez.jpg);
     height: auto;
-    /* Full height */
-    /* margin-top:20%;*/
-    
     z-index: -1;
     margin: auto; 
     /* Center and scale the image nicely */
     background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
   }
 
@@ -100,15 +96,31 @@ body {
   position: relative;
   opacity: 1;
   z-index: 102;
+  overflow: scroll;
+}
+
+.lead {
+  position: relative;
+  opacity: 1;
+  z-index: 102;
+  overflow: scroll;
+}
+
+.lead {
+  position: relative;
+  opacity: 1;
+  z-index: 102;
+  overflow: scroll;
 }
 
 .blog-letter-links{
-  position: relative;
+  /* position: relative; */
   padding-top: 10vh;
   margin: auto;
   width: 50%;
   height: 100%;
   font-size: 15vw;
+  overflow: scroll;
 }
 
 
@@ -123,6 +135,20 @@ body {
   opacity: .8;
   z-index: 100;
 }
+
+.box-blog {
+  margin: auto;
+  opacity: .45;
+
+  -webkit-clip-path:polygon(0 0, 100% 35%, 100% 65%, 150% 100%);
+  clip-path: circle(50% at 50% 50%);
+  width:100vw;
+  height:auto;
+  background:rgb(254, 249, 242);
+  z-index: -1;
+  position: relative;
+  overflow: scroll;
+ }
 
 
 .box {
@@ -140,7 +166,6 @@ body {
     background:rgb(254, 249, 242);
     z-index: -1;
     position: relative;
-
    }
 
    .icon-bar {
@@ -732,3 +757,27 @@ body {
     z-index: 100;
   }
 }
+
+
+
+/* 
+
+
+The seeds of Lost in Tropez’ indie-dance sound – sometimes whimsical and
+sometimes gritty – took root in the southern California beaches where they met in school. 
+
+The Southern California artist’s background in guitar and piano evolved into electronic production as they progressed.
+The juxtapositions that inspire Phill’s songs, like the comfort of family and the
+freedom of travel, or the solitude of nature and connection with an audience,
+weave rich storylines into his lyrics. Many of the songs on his first studio EP, self-
+titled Phillip Alexander Nugent and released in fall 2019, are inspired by his wife
+Michelle and his sons Miles and Beck.
+Girl in London, one of the album’s quieter, acoustic tracks, reflects on Phill’s
+journey to the U.K. to propose to Michelle. The ethereal Stargazers harks back to
+their travels in France and nights spent by campfire. The EP’s first single, Almost
+Perfect, was inspired by Gord Downie – one of Phill’s major musical influences,
+among others like Paul Simon, Neil Young, Foo Fighters and The Lumineers.
+Now as a father, moving his career as a recording artist forward and showing his
+sons we can all pursue our dreams means even more to Phill. Over the next year,
+that includes playing music festivals, setting up a tour, and getting back into the
+studio to record his first full-length album. */
