--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,10 @@ body {
   overflow: auto;
  }
 
+ ::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
 
 .box {
     margin: auto;
